--- a/web/pom.xml
+++ b/web/pom.xml
@@ -27,6 +27,7 @@
             <resource>
                 <directory>src/main/resources/</directory>
                 <includes>
+                    <include>*.xml</include>
                     <include>templates/*.html</include>
                 </includes>
                 <filtering>false</filtering>
@@ -35,6 +36,7 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>*.properties</include>
+                    <include>props/*.properties</include>
                 </includes>
                 <filtering>true</filtering>
             </resource>
